Made css changes for fixed sections on mobile

--- a/css/trillium.css
+++ b/css/trillium.css
@@ -71,7 +71,7 @@ a {
 
 
 .banner {
-	width: 100%;
+	width: 75%;
 }
 
 @media only screen and (min-width: 768px) {
@@ -207,11 +207,17 @@ a {
 
 .fixed {
 	position: relative;
-	min-height: 70%;
+	min-height: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	z-index: 1;
+}
+
+@media only screen and (min-width: 768px) {
+	.fixed {
+			min-height: 100%;
+	}
 }
 
 .sectiontext {
